--- a/style.css
+++ b/style.css
@@ -3,3 +3,9 @@ body {
   align-items: center;
   justify-content: center;
 }
+
+html {
+  font-size: 62.5%;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
+}
